cmss/main/default/objects/User/fields/AccountPrefix__c.field-meta.xml
<CustomField>
    <fullName>AccountPrefix__c</fullName>
    <description>Předčíslí účtu</description>
    <label>Account Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>