cmss/main/default/objects/User/fields/AgentActivityEndDate__c.field-meta.xml
<CustomField>
    <fullName>AgentActivityEndDate__c</fullName>
    <description>Datum ukončení činnosti OO v daném typu činnosti - zařazení ve struktuře</description>
    <label>Agent Activity End Date</label>
    <type>Date</type>
</CustomField>