cmss/main/default/objects/User/fields/AgentActivityStartDate__c.field-meta.xml
<CustomField>
    <fullName>AgentActivityStartDate__c</fullName>
    <description>Datum zahájení činnosti OO v daném typu činnosti - zařazení ve struktuře</description>
    <label>Agent Activity Start Date</label>
    <type>Date</type>
</CustomField>