cmss/main/default/objects/User/fields/AgentId__c.field-meta.xml
<CustomField>
    <fullName>AgentId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Agent Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>