cmss/main/default/objects/User/fields/BankAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>BankAccountNumber__c</fullName>
    <description>Číslo účtu</description>
    <label>Bank Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>