cmss/main/default/objects/User/fields/BankAccountPrefix__c.field-meta.xml
<CustomField>
    <fullName>BankAccountPrefix__c</fullName>
    <description>Předčíslí účtu</description>
    <label>Bank Account Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>