cmss/main/default/objects/User/fields/BankCode__c.field-meta.xml
<CustomField>
    <fullName>BankCode__c</fullName>
    <description>Kód banky</description>
    <label>Bank Code</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>