cmss/main/default/objects/User/fields/CombinedName__c.field-meta.xml
<CustomField>
    <fullName>CombinedName__c</fullName>
    <formula>IF(ISBLANK(Title), &quot;&quot;, 	Title &amp; &quot; &quot; ) &amp; FirstName &amp; &quot; &quot; &amp; LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combined Name</label>
    <type>Text</type>
</CustomField>