cmss/main/default/objects/User/fields/CommissionAccountBase__c.field-meta.xml
<CustomField>
    <fullName>CommissionAccountBase__c</fullName>
    <label>Commission Account Number Base</label>
    <length>15</length>
    <type>Text</type>
</CustomField>