cmss/main/default/objects/User/fields/CommissionAccountNr__c.field-meta.xml
<CustomField>
    <fullName>CommissionAccountNr__c</fullName>
    <description>Číslo provizního účtu</description>
    <externalId>true</externalId>
    <label>Commission Account Nr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>