cmss/main/default/objects/User/fields/CommissionAccountNrAll__c.field-meta.xml
<CustomField>
    <fullName>CommissionAccountNrAll__c</fullName>
    <label>Commission Account Number All</label>
    <length>20</length>
    <type>Text</type>
</CustomField>