cmss/main/default/objects/User/fields/CommissionAccountNrCheck__c.field-meta.xml
<CustomField>
    <fullName>CommissionAccountNrCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commission Account Number Check</label>
    <type>Checkbox</type>
</CustomField>