cmss/main/default/objects/User/fields/CommissionAccountNrEnd__c.field-meta.xml
<CustomField>
    <fullName>CommissionAccountNrEnd__c</fullName>
    <description>Koncovka ČPÚ. Je to číslo, které má 3 znaky.</description>
    <label>Commission Account Number End</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>