cmss/main/default/objects/User/fields/CommissionAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>CommissionAccountNumber__c</fullName>
    <description>Číslo provizního účtu</description>
    <label>Commission Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>