cmss/main/default/objects/User/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <description>Název firmy</description>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>