cmss/main/default/objects/User/fields/CompanyRegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>CompanyRegistrationNumber__c</fullName>
    <label>Company Registration Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>