cmss/main/default/objects/User/fields/CooperationEndDate__c.field-meta.xml
<CustomField>
    <fullName>CooperationEndDate__c</fullName>
    <description>Datum ukončení spolupráce</description>
    <label>Cooperation End Date</label>
    <type>Date</type>
</CustomField>