cmss/main/default/objects/User/fields/CooperationMonthsNumber__c.field-meta.xml
<CustomField>
    <fullName>CooperationMonthsNumber__c</fullName>
    <formula>IF(
ISBLANK(CooperationEndDate__c),
((TODAY() - CooperationStartDate__c) /(365/12)),
((CooperationEndDate__c - CooperationStartDate__c) /(365/12))
)</formula>
    <label>Cooperation Months Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>