cmss/main/default/objects/User/fields/CooperationPartnerType__c.field-meta.xml
<CustomField>
    <fullName>CooperationPartnerType__c</fullName>
    <description>Typ kooperačního partnera (zpr_cis_koop_partneri)</description>
    <label>Cooperation Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>