cmss/main/default/objects/User/fields/CooperationStartDate__c.field-meta.xml
<CustomField>
    <fullName>CooperationStartDate__c</fullName>
    <description>Datum, kdy byla s OO zahájena spolupráce</description>
    <label>Cooperation Start Date</label>
    <type>Date</type>
</CustomField>