cmss/main/default/objects/User/fields/ExternalId2__c.field-meta.xml
<CustomField>
    <fullName>ExternalId2__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Id 2</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>