cmss/main/default/objects/User/fields/GlowID__c.field-meta.xml
<CustomField>
    <fullName>GlowID__c</fullName>
    <label>Glow ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>