cmss/main/default/objects/User/fields/IsAgentActive__c.field-meta.xml
<CustomField>
    <fullName>IsAgentActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Určuje jestli je uživatel opravdu neaktivní, nebo jestli jde jen o aktivního agenta, který nemá přístup do CRM = může být správce stavu</description>
    <label>Active Agent</label>
    <type>Checkbox</type>
</CustomField>