cmss/main/default/objects/User/fields/IsRegionAssignable__c.field-meta.xml
<CustomField>
    <fullName>IsRegionAssignable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Typ činnost OZ jej opravňuje spravovat určitý region</description>
    <label>Is Region Assignable</label>
    <type>Checkbox</type>
</CustomField>