cmss/main/default/objects/User/fields/IsRegionAssigned__c.field-meta.xml
<CustomField>
    <fullName>IsRegionAssigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Typ činnost OZ jej opravňuje spravovat určitý region</description>
    <label>Is Region Assigned</label>
    <type>Checkbox</type>
</CustomField>