cmss/main/default/objects/User/fields/IsTechnical__c.field-meta.xml
<CustomField>
    <fullName>IsTechnical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Technical</label>
    <type>Checkbox</type>
</CustomField>