cmss/main/default/objects/User/fields/Junior__c.field-meta.xml
<CustomField>
    <fullName>Junior__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Junior</label>
    <type>Checkbox</type>
</CustomField>