cmss/main/default/objects/User/fields/LastLoginDate__c.field-meta.xml
<CustomField>
    <fullName>LastLoginDate__c</fullName>
    <label>LastLoginDate</label>
    <type>DateTime</type>
</CustomField>