cmss/main/default/objects/User/fields/LoginName__c.field-meta.xml
<CustomField>
    <fullName>LoginName__c</fullName>
    <description>Required for SSO</description>
    <externalId>true</externalId>
    <label>Login Name</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>