cmss/main/default/objects/User/fields/ManagerIds__c.field-meta.xml
<CustomField>
    <fullName>ManagerIds__c</fullName>
    <formula>ManagerId &amp; &quot;, &quot; &amp; Manager.ManagerId &amp; &quot;, &quot; &amp; Manager.Manager.ManagerId &amp; &quot;, &quot; &amp; Manager.Manager.Manager.ManagerId &amp; &quot;, &quot; &amp; Manager.Manager.Manager.Manager.ManagerId</formula>
    <label>Manager Id List</label>
    <type>Text</type>
</CustomField>