cmss/main/default/objects/User/fields/ManagerKP__c.field-meta.xml
<CustomField>
    <fullName>ManagerKP__c</fullName>
    <description>Přímý nadřízený z externí struktury KP</description>
    <label>Manager KP</label>
    <relationshipName>ManagerKP</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>