cmss/main/default/objects/User/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <description>Mobilní číslo kontaktu</description>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>