cmss/main/default/objects/User/fields/PersonalIdentificationNumber__c.field-meta.xml
<CustomField>
    <fullName>PersonalIdentificationNumber__c</fullName>
    <label>Personal Identification Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>