cmss/main/default/objects/User/fields/PersonId__c.field-meta.xml
<CustomField>
    <fullName>PersonId__c</fullName>
    <description>Person Id</description>
    <label>Person Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>