cmss/main/default/objects/User/fields/PersonType__c.field-meta.xml
<CustomField>
    <fullName>PersonType__c</fullName>
    <label>Person Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>