cmss/main/default/objects/User/fields/Phone1__c.field-meta.xml
<CustomField>
    <fullName>Phone1__c</fullName>
    <description>První telefonní číslo kontaktu</description>
    <label>Phone 1</label>
    <type>Phone</type>
</CustomField>