cmss/main/default/objects/User/fields/Phone2__c.field-meta.xml
<CustomField>
    <fullName>Phone2__c</fullName>
    <description>Druhý telefonní číslo kontaktu</description>
    <label>Phone 2</label>
    <type>Phone</type>
</CustomField>