cmss/main/default/objects/User/fields/PortfolioManType__c.field-meta.xml
<CustomField>
    <fullName>PortfolioManType__c</fullName>
    <description>K jakému typ správy má uživatel oprávnění. Pokud prázdné, nemá žádné oprávnění.</description>
    <label>Portfolio Man Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>