cmss/main/default/objects/User/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>Pozice/zařazení uživatele, zaměstnance</description>
    <label>Position</label>
    <length>50</length>
    <type>Text</type>
</CustomField>