cmss/main/default/objects/User/fields/ProvisionNumberCSOB__c.field-meta.xml
<CustomField>
    <fullName>ProvisionNumberCSOB__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Provision Number CSOB</label>
    <length>10</length>
    <type>Text</type>
</CustomField>