cmss/main/default/objects/User/fields/ResignationTo__c.field-meta.xml
<CustomField>
    <fullName>ResignationTo__c</fullName>
    <description>Datum uplynutí výpovědi</description>
    <label>Resignation To</label>
    <type>Date</type>
</CustomField>