cmss/main/default/objects/User/fields/ResignationType__c.field-meta.xml
<CustomField>
    <fullName>ResignationType__c</fullName>
    <description>Typ výpovědi</description>
    <label>Resignation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>