cmss/main/default/objects/User/fields/SalesAgentType__c.field-meta.xml
<CustomField>
    <fullName>SalesAgentType__c</fullName>
    <label>Sales Agent Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>