cmss/main/default/objects/User/fields/SortingCode__c.field-meta.xml
<CustomField>
    <fullName>SortingCode__c</fullName>
    <description>Číslo třídícího hlediska</description>
    <label>Sorting Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>