cmss/main/default/objects/User/fields/SuperiorLevel1__c.field-meta.xml
<CustomField>
    <fullName>SuperiorLevel1__c</fullName>
    <description>Nadřízený nejvyšší úrovně, pro OZ</description>
    <label>Superior Level 1</label>
    <relationshipName>SuperiorLevel1</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>