cmss/main/default/objects/User/fields/SuperiorLevel2__c.field-meta.xml
<CustomField>
    <fullName>SuperiorLevel2__c</fullName>
    <description>Nadřízený úrovně 2 (je níže než úroveň 1)</description>
    <label>Superior Level 2</label>
    <relationshipName>SuperiorLevel2</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>