cmss/main/default/objects/User/fields/SuperiorLevel3__c.field-meta.xml
<CustomField>
    <fullName>SuperiorLevel3__c</fullName>
    <description>Nadřízený - úroveň 3 (níže než úroveň 2)</description>
    <label>Superior Level 3</label>
    <relationshipName>SuperiorLevel3</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>