cmss/main/default/objects/User/fields/UPN__c.field-meta.xml
<CustomField>
    <fullName>UPN__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>UPN</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>