cmss/main/default/objects/User/validationRules/User_CheckChangeEmailPermission.validationRule-meta.xml
<ValidationRule>
    <fullName>User_CheckChangeEmailPermission</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Email ) &amp;&amp; NOT( $Permission.UserEmailManagement )</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Nemáte potřebná oprávnění pro změnu emailu</errorMessage>
</ValidationRule>